reference commit 8711c7726 fix(#2944): Fix connection error in PLC S7 connector (#2946)