@@ -23,10 +23,9 @@ import org.apache.streampipes.extensions.api.declarer.IExtensionModuleExport;
 import org.apache.streampipes.extensions.api.migration.IModelMigrator;
 import org.apache.streampipes.extensions.api.pe.IStreamPipesPipelineElement;
 import org.apache.streampipes.extensions.connectors.kafka.adapter.KafkaProtocol;
-import org.apache.streampipes.extensions.connectors.kafka.migration.KafkaAdapterMigrationV1;
-import org.apache.streampipes.extensions.connectors.kafka.migration.KafkaSinkMigrationV1;
 import org.apache.streampipes.extensions.connectors.kafka.sink.KafkaPublishSink;
 
+import java.util.Collections;
 import java.util.List;
 
 public class KafkaConnectorsModuleExport implements IExtensionModuleExport {
@@ -46,9 +45,6 @@ public class KafkaConnectorsModuleExport implements IExtensionModuleExport {
 
   @Override
   public List<IModelMigrator<?, ?>> migrators() {
-    return List.of(
-        new KafkaAdapterMigrationV1(),
-        new KafkaSinkMigrationV1()
-    );
+    return Collections.emptyList();
   }
 }
